# automated_trading_agents

./: .gitignore  README.md  pyproject.toml  skills-lock.json
.claude/: claude.md
config/: mcp_servers.example.json
docs/: architecture.md  mcp.md  nemoclaw_openshell.md  research_dossier.md
scripts/: mcp_probe.py
skills/binance-readonly/: SKILL.md
skills/evidence-scoring/: SKILL.md
skills/market-analysis/: SKILL.md
skills/reporting/: SKILL.md
skills/risk-review/: SKILL.md
src/trading_agent/: __init__.py  backtest.py  cli.py  decision_replay.py  exchange.py
src/trading_agent/agents/: __init__.py  introductions.py  position_review.py  signals.py  strategy.py
src/trading_agent/core/: __init__.py  pnl.py  (+11 more)
tests/: test_agent_runtime.py  test_async_runtime.py  test_backtest.py  test_binance_skills.py  test_cadence.py  test_chat.py  test_decision_replay.py  test_decision_schema.py  test_envs.py  test_exchange.py  test_exchange_orders.py  test_exchange_sync.py  test_exit_ladder.py  test_free_feeds.py  test_graph_pipeline.py  test_indicators.py  test_levels.py  test_live_feed.py  test_logging.py  test_logtail.py  test_maker_pullback_and_pnl.py  test_market_data_tools.py  test_mcp_tools.py  test_modes.py  test_ops_wiring.py  test_placeholder_gating.py  test_pnl.py  test_position_review.py  test_prompts.py  test_reflection.py  test_repl_surface.py  test_reporting.py  test_risk.py  test_skill_cli_dispatch.py  test_skill_param_normalization.py  test_storage_migration.py  test_strategy_tuning.py  test_stream_capture.py  test_streaming_smell.py  test_token_cost.py  (+3 more)
(+37 files in other folders)
