[project]
name = "trading-agent"
version = "0.1.0"
description = "CLI-first multi-agent Binance Spot testnet/live trading agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "ddgs>=9.14.4",
    "deepagents>=0.6.8,<0.7",
    "langchain>=1.3.7",
    "langchain-anthropic>=1.4.5",
    "langchain-google-genai>=4.2.0",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.0",
    "langchain-openrouter>=0.2.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
]

[project.scripts]
trading-agent = "trading_agent.cli:main"
trading-agent-repl = "trading_agent.cli:repl_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_agent"]

[tool.uv]
package = true
